src/main/fabric8/event-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: event
    provider: fabric8
    version: "3.1"
  name: eventroute
  namespace: myproject
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: eventservice
